@@ -29,7 +29,7 @@ import org.apache.velocity.Template;
 import org.apache.velocity.VelocityContext;
 import org.apache.velocity.app.VelocityEngine;
 import org.apache.velocity.runtime.RuntimeConstants;
-import org.apache.velocity.runtime.log.NullLogSystem;
+import org.apache.velocity.runtime.log.NullLogChute;
 
 import java.io.File;
 import java.io.FileOutputStream;
@@ -231,7 +231,7 @@ public class ClassGenerationAction {
 		TemplateType[] templateTypes = artifact.getTemplateTypes(artifactMode);
 		for (TemplateType type : templateTypes) {
 
-			try (Writer out = openWriter(type);) {
+			try (Writer out = openWriter(type)) {
 				if (out != null) {
 
 					resetContextForArtifactTemplate(artifact, type);
@@ -261,7 +261,7 @@ public class ClassGenerationAction {
 			Properties props = new Properties();
 
 			// null logger that will prevent velocity.log from being generated
-			props.put(RuntimeConstants.RUNTIME_LOG_LOGSYSTEM_CLASS, NullLogSystem.class.getName());
+			props.put(RuntimeConstants.RUNTIME_LOG_LOGSYSTEM_CLASS, NullLogChute.class.getName());
 			props.put("resource.loader", "cayenne");
 			props.put("cayenne.resource.loader.class", ClassGeneratorResourceLoader.class.getName());
 			props.put("cayenne.resource.loader.cache", "false");
